# templates

./: LICENSE  README.md
cmake/freeglut/: .gitignore  CMakeLists.txt  README.md
cmake/freeglut/lib/SOIL2/: premake4.lua
cmake/freeglut/lib/glad/: CMakeLists.txt
cmake/freeglut/lib/glad/glad-gl-1.1/include/glad/: glad.h
cmake/freeglut/lib/glad/glad-gl-1.1/src/: glad.c
cmake/freeglut/lib/glad/glad-gl-2.0/include/glad/: glad.h
cmake/freeglut/lib/glad/glad-gl-2.0/src/: glad.c
cmake/freeglut/lib/glad/glad-gl-3.3/src/: glad.c
cmake/freeglut/src/: main.cpp
cmake/glfw/: CMakeLists.txt  README.md
cmake/glfw/lib/SOIL2/: premake5.lua
cmake/glfw/lib/glad/glad-gl-3.3/include/glad/: glad.h
cmake/glfw/src/: main.cpp
